# kl_to_1c_parse

./: .gitignore  Cargo.toml  readme.md
config/: default.toml
config/includes/: inputs.toml
src/: file_discovery.rs  lib.rs  main.rs  stats.rs
src/config/: cli.rs  loader.rs  mod.rs  models.rs
src/parser/: encoding.rs  mod.rs  models.rs  state.rs  stream.rs
tests/: encoding_test.rs  integration.rs  length_test.rs  stream_test.rs
