[package]
name = "load1c"
version = "0.1.2"
edition = "2024"
authors = ["Andrew"]
description = "High-performance parser for 1CClientBankExchange format"

[dependencies]
# Для буферизированного чтения (в стандартной библиотеке)
# Для будущего расширения:
# postgres = { version = "0.19", optional = true }
# tokio = { version = "1", features = ["full"], optional = true }
encoding_rs = "0.8"  # Поддержка Windows-1251, CP-866 и др.

[features]
default = []
postgres = []  # Фича для будущей интеграции с БД

[[bin]]
name = "load1c"
path = "src/main.rs"

[lib]
name = "load1c"
path = "src/lib.rs"
