[package]
name = "load1c"
version = "0.1.8"
edition = "2024"
authors = ["Andrew"]
description = "High-performance parser for 1CClientBankExchange format"

[dependencies]
# Парсинг
encoding_rs = "0.8"

# Конфигурация
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI аргументы
clap = { version = "4.4", features = ["derive"] }

# Прогресс-бар (опционально)
indicatif = { version = "0.17", optional = true }

# Поиск файлов
glob = "0.3"
walkdir = "2.4"

# Пути
dirs = "5.0"

[dev-dependencies]
tempfile = "3.9"

[features]
default = ["line-limit-error"]
line-limit-error = []    # Завершать программу при превышении
line-limit-truncate = [] # Обрезать строку при превышении
progress-bar = ["dep:indicatif"]  # ⭐ НОВОЕ: прогресс-бар обработки

[[bin]]
name = "load1c"
path = "src/main.rs"

[lib]
name = "load1c"
path = "src/lib.rs"

[profile.release]
debug = true
